improve(tests) addressing test comments

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -8,7 +8,8 @@ option_configure_nginx: true
 
 ara_user: ara
 ara_home: "/home/{{ara_user}}"
-ara_virtual_env: "/home/{{ara_user}}/virtual_envs"
+# ara_virtual_env: "/home/{{ara_user}}/virtual_envs"
+# ara_version: "0.11.0"
 ara_log_dir: /var/log/ara
 
 ara_ssl_key: ara
